--- a/src/app/suppliers/supplier-evaluation/supplier-evaluation.component.css
+++ b/src/app/suppliers/supplier-evaluation/supplier-evaluation.component.css
@@ -1,4 +1,3 @@
-
 .courses-panel {
   width: 100%;
   margin: 20px 0 0 0;
@@ -165,7 +164,7 @@ button.roundedButton.mat-raised-button {
   display: flex; /* Use flexbox */
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
-  height: 100vh; /* Make the container full height of the viewport */
+  min-height: 100%; /* Allow content to grow with the layout */
 }
 
 .example-list-wrapping {
